更新 - 20231110 1.修改L3送料与配料计划的折线图。 2.修改行车作业结果分析的折线图。 3.增加行车作业结果分析数据导出excel表格。

--- a/UACSView/View_CraneMonitor/StatForm.resx
+++ b/UACSView/View_CraneMonitor/StatForm.resx
@@ -123,6 +123,9 @@
   <metadata name="OPER_ID2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="AutoFlag2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="CRANE_NO.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
